--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "2.0.0",
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "~0.6.3",
-    "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt-contrib-uglify": "~0.2.2"
+    "grunt-contrib-sass": "~0.3.0",
+    "grunt-contrib-watch": "~0.4.4",
+    "grunt-contrib-connect": "~0.3.0",
+    "grunt-contrib-imagemin": "~0.2.0",
+    "connect-livereload": "~0.2.0"
   }
 }
