--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt-contrib-watch": "~0.4.4",
     "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-imagemin": "~0.2.0",
+    "grunt-contrib-htmlmin": "~0.1.3",
     "connect-livereload": "~0.2.0"
   }
 }
