--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-imagemin": "~0.2.0",
     "grunt-contrib-htmlmin": "~0.1.3",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-uglify": "~0.2.2",
     "connect-livereload": "~0.2.0"
   }
 }
