--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "skurid.in",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-sass": "~0.3.0",
-    "grunt-contrib-watch": "~0.4.4",
-    "grunt-contrib-connect": "~0.3.0",
-    "grunt-contrib-imagemin": "~0.2.0",
-    "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-uglify": "~0.2.2",
-    "connect-livereload": "~0.2.0"
+    "grunt": "0.x",
+    "grunt-contrib-sass": "0.x",
+    "grunt-contrib-watch": "0.x",
+    "grunt-contrib-connect": "0.x",
+    "grunt-contrib-imagemin": "0.x",
+    "grunt-contrib-coffee": "~0.x",
+    "grunt-contrib-uglify": "0.x",
+    "grunt-contrib-jade": "0.x"
   }
 }
