--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "skurid.in",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "devDependencies": {
-    "grunt": "*",
-    "grunt-contrib-sass": "*",
-    "grunt-contrib-watch": "*",
-    "grunt-contrib-connect": "*",
-    "grunt-contrib-imagemin": "*",
-    "grunt-contrib-coffee": "*",
-    "grunt-contrib-uglify": "*",
-    "grunt-concurrent": "*",
-    "grunt-contrib-jade": "*"
+    "grunt-contrib-coffee": "~0.10.1",
+    "grunt-concurrent": "~0.5.0",
+    "grunt": "~0.4.4",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-connect": "~0.7.1",
+    "grunt-contrib-imagemin": "~0.6.1",
+    "grunt-contrib-jade": "~0.11.0",
+    "grunt-sass": "~0.12.1"
   }
 }
