--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "gulp": "^3.8.7",
     "gulp-changed": "^1.0.0",
     "gulp-connect": "^2.0.6",
+    "gulp-cssshrink": "^0.1.4",
+    "gulp-htmlmin": "^0.2.0",
     "gulp-sass": "^0.7.3"
   }
 }
