--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "skuridin",
-  "dependencies": {
-    "gulp": "^3.8.7"
-  },
   "devDependencies": {
-    "gulp": "^3.8.7",
-    "gulp-changed": "^1.0.0",
-    "gulp-connect": "^2.0.6",
-    "gulp-cssshrink": "^0.1.4",
-    "gulp-htmlmin": "^0.2.0",
-    "gulp-sass": "^0.7.3"
+    "del": "^1.1.1",
+    "gulp": "^3.8.11",
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-connect": "^2.2.0",
+    "gulp-imagemin": "^2.2.0",
+    "gulp-jade": "^1.0.0",
+    "gulp-load-plugins": "^0.8.0",
+    "gulp-minify-css": "^0.4.6",
+    "gulp-plumber": "^0.6.6",
+    "gulp-stylus": "^2.0.1",
+    "gulp-uglify": "^1.1.0",
+    "gulp-watch": "^4.1.1"
   }
 }
