--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "private": true,
+  "scripts": {
+    "build": "webpack -c -p --progress"
+  },
   "devDependencies": {
+    "html-webpack-plugin": "^1.5.2",
     "node-libs-browser": "^0.5.2",
     "webpack": "^1.10.0",
     "webpack-dev-server": "^1.10.1"
