--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "html-webpack-plugin": "^1.5.2",
     "img-loader": "^1.1.0",
     "node-libs-browser": "^0.5.2",
+    "normalize.css": "^3.0.3",
     "stylus-loader": "^1.2.1",
     "webpack": "^1.10.0",
     "webpack-dev-server": "^1.10.1"
