--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "private": true,
   "scripts": {
-    "build": "webpack -c -p --progress"
+    "build": "webpack -c -p --optimize-dedupe --optimize-occurence-order --progress",
+    "dev": "webpack-dev-server -d --progress --host 0.0.0.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
     "css-loader": "^0.15.1",
     "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.8.4",
     "html-webpack-plugin": "^1.5.2",
-    "img-loader": "^1.1.0",
+    "image-webpack-loader": "^1.6.1",
+    "imagemin": "^3.2.0",
     "node-libs-browser": "^0.5.2",
     "normalize.css": "^3.0.3",
     "stylus-loader": "^1.2.1",
