--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   },
   "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
+    "bootstrap": "^3.3.5",
     "css-loader": "^0.15.1",
     "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.8.4",
     "html-webpack-plugin": "^1.5.2",
+    "image-webpack-loader": "^1.6.1",
+    "imagemin": "^3.2.0",
     "node-libs-browser": "^0.5.2",
-    "normalize.css": "^3.0.3",
     "stylus-loader": "^1.2.1",
     "webpack": "^1.10.0",
     "webpack-dev-server": "^1.10.1"
