--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "image-webpack-loader": "^1.6.1",
     "imagemin": "^3.2.0",
     "node-libs-browser": "^0.5.2",
+    "react": "^0.13.3",
+    "react-router": "^0.13.3",
     "stylus-loader": "^1.2.1",
     "webpack": "^1.10.0",
     "webpack-dev-server": "^1.10.1"
