--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
+    "babel-core": "^5.7.4",
+    "babel-loader": "^5.3.2",
     "bootstrap": "^3.3.5",
     "css-loader": "^0.15.1",
     "extract-text-webpack-plugin": "^0.8.2",
