--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-core": "^5.7.4",
     "babel-loader": "^5.3.2",
     "bootstrap": "^3.3.5",
+    "clean-webpack-plugin": "^0.1.3",
     "css-loader": "^0.15.1",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
