--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "private": true,
   "scripts": {
-    "build": "webpack -c -p --optimize-dedupe --optimize-occurence-order --progress",
+    "build_step": "webpack -c -p --optimize-dedupe --optimize-occurence-order --progress",
+    "make_static": "node static.js",
+    "build": "npm run build_step && npm run make_static",
     "dev": "webpack-dev-server -d --progress --host 0.0.0.0"
   },
   "devDependencies": {
