--- a/package.json
+++ b/package.json
@@ -1,26 +1,21 @@
 {
   "private": true,
   "scripts": {
-    "build_step": "NODE_ENV=production webpack -c -p --optimize-dedupe --optimize-occurence-order --progress",
-    "make_static": "node static.js",
-    "build": "npm run build_step && npm run make_static",
-    "dev": "webpack-dev-server -d --progress --host 0.0.0.0"
+    "build": "webpack -c -p --progress --optimize-dedupe --optimize-occurence-order",
+    "dev": "webpack-dev-server -d --progress --optimize-dedupe --optimize-occurence-order --host 0.0.0.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
-    "babel-core": "^5.7.4",
-    "babel-loader": "^5.3.2",
-    "bootstrap": "^3.3.5",
     "clean-webpack-plugin": "^0.1.3",
     "css-loader": "^0.15.1",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
+    "handlebars": "^3.0.3",
+    "handlebars-loader": "^1.1.0",
     "html-webpack-plugin": "^1.5.2",
     "image-webpack-loader": "^1.6.1",
     "imagemin": "^3.2.0",
     "node-libs-browser": "^0.5.2",
-    "react": "^0.13.3",
-    "react-router": "^0.13.3",
     "stylus-loader": "^1.2.1",
     "webpack": "^1.10.0",
     "webpack-dev-server": "^1.10.1"
