--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "devDependencies": {
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
+    "file-loader": "^0.8.4",
+    "image-webpack-loader": "^1.6.1",
+    "imagemin": "^3.2.0",
+    "jshint": "^2.8.0",
+    "jshint-loader": "^0.8.3",
     "react": "^0.13.3",
+    "react-hot-loader": "^1.2.8",
     "react-router": "^0.13.3",
+    "stylus-loader": "^1.2.1",
     "webpack": "^1.11.0",
     "webpack-dev-server": "^1.10.1"
   }
