--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "private": true,
+  "scripts": {
+    "build": "webpack"
+  },
   "devDependencies": {
+    "autoprefixer-loader": "^2.0.0",
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
+    "clean-webpack-plugin": "^0.1.3",
+    "css-loader": "^0.16.0",
+    "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
+    "html-webpack-plugin": "^1.6.1",
     "image-webpack-loader": "^1.6.1",
     "imagemin": "^3.2.0",
-    "jshint": "^2.8.0",
-    "jshint-loader": "^0.8.3",
+    "normalize.css": "^3.0.3",
     "react": "^0.13.3",
     "react-hot-loader": "^1.2.8",
     "react-router": "^0.13.3",
