--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "private": true,
   "scripts": {
-    "build": "gulp default"
+    "prebuild": "npm run lint",
+    "build": "gulp default",
+    "lint": "eslint gulpfile.js"
   },
   "devDependencies": {
     "cssnano": "^2.6.1",
+    "eslint": "^1.6.0",
     "gulp": "^3.9.0",
     "gulp-htmlmin": "^1.1.4",
     "gulp-postcss": "^6.0.0",
