--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,5 @@ jobs:
       - name: "Listing the directory"
         run: "ls -alh"
       - name: "Getting git status"
-        run "git status"
+        run: "git status"
         
