--- a/apps/skurid.in/package.json
+++ b/apps/skurid.in/package.json
@@ -7,10 +7,11 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
+    "preview": "deno run --allow-net --allow-read --allow-env ./dist/server/entry.mjs",
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/deno": "^3.0.0",
     "@astrojs/solid-js": "^1.2.3",
     "@astrojs/tailwind": "^2.1.3",
     "astro": "^1.7.2",
